#VERSION 0.8.2#
 
 - added method initConfig() in Peak_Core and deprecated method init()

 - added method setVars() to Peak_Config

 - added static method getEnv() and static private property $_env in Peak_Core, fixed Peak_Bootstrap accordingly

 - deprecated constants PROJECT_NAME, PROJECT_DESCR, APP_DEFAULT_CTRL, DEV_MODE

 - renamed constant ROOT to PUBLIC_ROOT, ,ROOT_ABSPATH become PUBLIC_ABSPATH and ROOT_URL become PUBLIC_URL.
   Fixed method baseUrl() in Peak_View_Render accordingly

 - minor fix of method baseUrl() in Peak_View_Render

 - minor fix of method _load in Peak_Config_Ini


#VESRION 0.8.1#
 
 - modified Peak_View_Helper_Debug and added Peak_View_Helper_Debugbar.  

 - modified Peak_Helpers to support array of class name prefixes, library view helpers classes prefix renamed to 
   Peak_View_Helper_. Peak Helper can be extended by application now.

 - added method set() to Peak_View.

 - deprecated views/functions/ folder and files, moved general.php functions to new view helper html.php

 - added method getExtension() to Peak_Spl_FileInfo

 - added class Peak_Spl_Dirinfo
  
 - deprecated Peak_Core_Extension_Codegen in favor of new Peak_Codegen abstract class 

 - added another syntax support for regex route in Peak_Router.
   Standard syntax : addRegex([my regex], array('controller' => 'cltrname', 'action' => 'actionname'));
   New other way: addRegex([my regex], 'cltrname.actionname');

 - Controllers actions prefix name are now managed by Peak_Controller_Action only. It make thing cleaner outside of controllers.
   This change has been fixed in Peak_Controller_Front, Peak_Router.
   We can also customize action prefix name in controllers even if it's not recommended for consistency reasons.

 - added function _autoloadClass2File() to autoload.php

 - fix methods isModule() and isController() from Peak_Core and removed the deprecated method getControllers()

 - application custom classes name prefix changed in autoload.php. 